# movie_publisher

./: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
launch/: movie_publisher.launch
nodes/: movie_publisher_node
scripts/: add_movie_to_bag  fix_bag_timestamps  merge.py  movie_to_bag
